--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
   border-radius: 4.8em;
 }
 
-.buttons:hover {
+.buttons:hover,
+.menu-item:hover {
   text-decoration: underline;
 }
 
@@ -69,8 +70,8 @@ body {
 }
 
 .hero-content {
-  margin-left: 100px;
-  max-width: 586px;
+  margin-left: 5em;
+  max-width: 30%;
   width: 100%;
 }
 
@@ -93,6 +94,37 @@ body {
 .hero-button {
   margin-top: 1em;
   background-color: #fff;
+}
+
+.section-description {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.description-content {
+  max-width: 50%;
+  text-align: center;
+}
+
+.description-title {
+  font-size: 3em;
+  line-height: 1.2em;
+  text-transform: uppercase;
+}
+
+.description-subtitle {
+  margin-top: 0.75em;
+  font-size: 1.35em;
+  line-height: 1.625em;
+  letter-spacing: 0.02em;
+}
+
+.description-note {
+  margin-top: 0.5em;
+  line-height: 1.2em;
+  color: #73A6B1;
 }
 /* #endregion */
 
