--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,17 @@ body {
   line-height: 20px;
 }
 
+section:not(:nth-child(3)) {
+  height: 100vh;
+}
+
 .buttons {
   display: inline-block;
   font-size: 0.9em;
   text-transform: uppercase;
   padding: 1.25em 2.2em;
   border-radius: 4.8em;
+  background-color: #7AE5FD;
 }
 
 .buttons:hover,
@@ -52,12 +57,12 @@ body {
 
 .menu-item:last-child {
   margin-left: 1.4em;
-  background-color: #7AE5FD;
+
 }
 /* #endregion */
 /* region main */
 .main {
-  padding-top: 145px;
+  padding-top: 7.25em;
   height: 100vh;
 }
 
@@ -66,7 +71,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
   display: flex;
   align-items: center;
 }
@@ -99,7 +103,6 @@ body {
 }
 
 .section-description {
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -123,7 +126,7 @@ body {
   letter-spacing: 0.02em;
 }
 
-.description_note {
+.description_text {
   margin-top: 0.5em;
   line-height: 1.2em;
   color: #73A6B1;
@@ -189,13 +192,13 @@ body {
 }
 
 .our-mission_container {
-  padding: 0 3.5em;
+  padding: 0 4.35em;
   position: relative;
+  width: 100%;
 }
 
 .our-mission_content {
   padding: 0 3.1em;
-  border: 1px solid red;
   background-color: #F1FDFF;
 }
 
@@ -210,8 +213,69 @@ body {
 .our-mission_image {
   position: absolute;
   bottom: 0;
-  right: 0;
-  width: 50%;
-} 
+  right: 2em;
+  width: 35.75em;
+}
+
+.section-sponsorship {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.75em;
+}
+
+.sponsorship-text_container {
+  max-width: 51.65em;
+  text-align: center;
+}
+
+.sponsorship-text_title {
+  font-size: 3em;
+  line-height: 1.2em;
+  text-transform: uppercase;
+}
+
+.sponsorship-text {
+  margin-top: 0.75em;
+  line-height: 1.2em;
+  color: #73A6B1;
+  letter-spacing: 0.03em;
+}
+
+.sponsorship-money_container {
+  max-width: 22em;
+  text-align: center;
+}
+
+.sponsorship-money_title {
+  font-size: 1.35;
+  letter-spacing: 0.05em;
+  margin-bottom: 0.85em;
+}
+
+.sponsorship-money_counter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.65em;
+  padding: 0.25em;
+}
+
+.counter_numbers {
+  font-size: 3rem;
+}
+
+.counter_separator {
+  background-color: #9AD2DE;
+  width: 0.1em;
+  height: 3.1em;
+}
+
+.section-contacts {
+  background-color: #F9FADF;
+  padding: 0 3.5em;
+}
+
+
 /*  #endregion */
 
